made some changes

--- a/Templates/edit.html
+++ b/Templates/edit.html
@@ -25,7 +25,7 @@
 
             <h1>Add/Edit psot</h1>
 
-            <form id="contactForm" data-sb-form-api-token="API_TOKEN" , action="/edit/{{post.sno}}" , method="POST">
+            <form id="contactForm" data-sb-form-api-token="API_TOKEN" , action="/edit/{{sno}}" , method="POST">
                 <div class="form-floating">
                     <input class="form-control" id="title" name="title" type="text" placeholder="Enter Title"
                         data-sb-validations="required" value="{{post.title}}" />
